--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "tgchannel2nostr",
   "version": "0.0.1",
   "devDependencies": {
+    "vitest": "^1.6.0",
     "wrangler": "2.9.0"
   },
   "private": true,
   "scripts": {
     "start": "wrangler dev",
-    "deploy": "wrangler publish"
+    "deploy": "wrangler publish",
+    "test": "vitest run"
   },
   "dependencies": {
     "@noble/secp256k1": "^1.7.1"
